# complens.ai.web

./: .gitattributes  .gitignore  BASTION_GUIDE.md  CLAUDE.md  CODE_REVIEW_SUMMARY.md  COMPLETED.md  DEPLOY-NOW.sh  DEPLOYMENT_STATUS.md  MIGRATION_GUIDE.md  MULTI_TENANT_IMPLEMENTATION.md  Makefile  PHASE1_FIXES.md  README.md  SETUP_FIRST_ADMIN.md  Steve_Ross_Resume(2026).docx.txt  check-deployment.md  claude.md  pyproject.toml  samconfig.toml  setup-local-env.sh  template.yaml  test-cors.sh
.aws-sam/: build.toml
.github/workflows/: deploy-prod.yml  deploy.yml  pr-checks.yml
desktop/: index.html  package.json
desktop/src/: App.tsx  index.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: commands.rs  db.rs  main.rs  oauth.rs
docs/: ARCHITECTURE.md  BEDROCK_MODELS.md  CICD_SETUP.md  DATABASE_PASSWORD_SETUP.md  DEPLOYMENT.md  EXTERNAL_SECURITY_INTEL.md  GITHUB_ACTIONS_SETUP.md  GOOGLE_OAUTH_SETUP.md  MONITORING_GUIDE.md  VISION.md
frontend/: .env.example  .gitignore  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js
infra/: github-oidc.yaml
infrastructure/cloudformation/: cognito-only.yaml  deploy-cognito.sh  deploy.sh  main.yaml
infrastructure/lambda-placeholder/: index.js
mcp-servers/: README.md
mcp-servers/google-workspace-security/: .env.example  Dockerfile  README.md  index.js  package.json
scripts/: Deploy-Complens.ps1  Deploy-Lambda.ps1  README.md  add-user-to-org.sh  apply-migration.sh  bastion-setup-owner.sh  check-cognito-config.sh  check-cognito.sh  check-dns.sh  check-stack.sh  debug-api.sh  debug-deployment.sh  deploy-frontend-with-cognito.sh  deploy-lambda.sh  deploy.sh  diagnose-uuid-issue.sql  fix-cors.sh  fix-organizations-table.sh  fix-organizations-table.sql  fix-uuid-schema.sh  get-my-cognito-sub.sh  get-rds-connection.sh  run-all-migrations.sh  seed_data.py  setup-admin-user.sql  setup-first-admin.sh  setup-first-owner.sql  setup-owner-simple.sql  setup-owner.sh  setup-stripe-billing.sh  test_api.py  update-secrets.sh
step-functions/: domain-provisioning.asl.json  workflow-executor-express.asl.json  workflow-executor.asl.json
tests/: conftest.py
tests/integration/: __init__.py
tests/security/: test_authorization.py
v2/: .gitignore  CLAUDE.md  package.json  samconfig.toml  template.yaml
v3/: CLAUDE.md  README.md  samconfig.toml  template.yaml
web/: .env.example  .env.local  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
(+518 files in other folders)
