[project]
name = "complens"
version = "0.1.0"
description = "AI-Native Marketing Automation Platform"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [
    { name = "Complens.ai Team" }
]

dependencies = [
    "boto3>=1.34.0",
    "pydantic>=2.5.0",
    "python-ulid>=2.2.0",
    "structlog>=24.1.0",
    "PyJWT>=2.8.0",
    "cryptography>=41.0.0",
    "httpx>=0.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "moto[dynamodb,sqs,cognitoidp,events,stepfunctions]>=5.0.0",
    "mypy>=1.8.0",
    "ruff>=0.1.9",
    "boto3-stubs[dynamodb,sqs,bedrock-runtime,cognito-idp]>=1.34.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/layers/shared/python/complens"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["complens"]
